--- a/fastapi-first-steps/requirements.txt
+++ b/fastapi-first-steps/requirements.txt
@@ -1,7 +1,10 @@
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
 certifi==2025.11.12
+cffi==2.0.0
 click==8.3.1
 dnspython==2.8.0
 email-validator==2.3.0
@@ -19,10 +22,14 @@ Jinja2==3.1.6
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+passlib==1.7.4
 psycopg==3.3.1
+pwdlib==0.3.0
+pycparser==2.23
 pydantic==2.12.5
 pydantic_core==2.41.5
 Pygments==2.19.2
+PyJWT==2.10.1
 python-dotenv==1.2.1
 python-multipart==0.0.20
 PyYAML==6.0.3
