--- a/fastapi-sqlmodel-devinote/requirements.txt
+++ b/fastapi-sqlmodel-devinote/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.17.2
 annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.11.0
@@ -12,12 +13,15 @@ email-validator==2.3.0
 fastapi==0.120.0
 fastapi-cli==0.0.14
 fastapi-cloud-cli==0.3.1
+fastar==0.8.0
+greenlet==3.3.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
 idna==3.11
 Jinja2==3.1.6
+Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
